<resources>
    <string name="app_name">MEDIFY</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_btn">Login</string>
    <string name="create_btn">Create</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="smart_medication_manager">Smart Medication Manager</string>
    <string name="caretaker_mode">Caretaker Mode</string>
    <string name="medicine">Medicine</string>
    <string name="schedule">Schedule</string>
    <string name="history">History</string>
    <string name="managing_mode">Managing Mode</string>
    <string name="logout">Logout</string>
    <string name="managing_mode_description">This setting unlocks new functions which are meant to be used by caretakers or self-responsible people.</string>
    <string name="off">Off</string>
    <string name="manage_patients">Manage Patients</string>
    <string name="logout_description">Exit or Switch from Account</string>
    <string name="medicine_name_unique">Medicine Name (Unique)</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="notes">Notes:</string>
    <string name="important_notes">Important Notes</string>
    <string name="barcode">Barcode:</string>
    <string name="scan_barcode">SCAN BARCODE</string>
    <string name="cancel">Cancel</string>
    <string name="quantity_number">Quantity (Number)</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="manage_myself">Manage myself</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="alarms">Alarms</string>
    <string name="period">Period</string>
    <string name="next_taking">Next taking</string>
    <string name="med_name">Med Name</string>
    <string name="patient_username">Patient Username</string>
    <string name="check">Check</string>
    <string name="submit">Submit</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="pick">Pick</string>
    <string name="periodicity_every">Periodicity: every</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="repeat_every">Repeat Every:</string>
    <string name="requests">Requests</string>
    <string name="alarm_id">AlarmID</string>
    <string name="dismiss">Dismiss</string>
    <string name="door">Door:</string>
    <string name="time">Time</string>
    <string name="barcode_2point">Barcode: </string>
    <string name="prescriptions">Prescriptions</string>
</resources>