<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameTxt"
        android:layout_centerHorizontal="true"
        android:text="@string/smart_medication_manager"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/usernameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:autofillHints="username_value"
        android:ems="15"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameTxt"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:autofillHints="password_value"
        android:ems="15"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:layout_below="@+id/passwordTxt"
        android:layout_alignStart="@+id/passwordTxt"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_btn"
        android:layout_below="@+id/passwordTxt"
        android:layout_alignEnd="@+id/passwordTxt"
        tools:ignore="MissingConstraints" />

</RelativeLayout>