<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedModeActivity"
    android:background="@color/nord_white">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        style="@style/textTitleProperties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:layout_margin="30dp"
        android:text="@string/managing_mode" />

    <TextView
        android:id="@+id/textView3"
        style="@style/textProperties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginEnd="30dp"
        android:text="@string/managing_mode_description" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/advancedModeSwitch"
        style="@style/textProperties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/textView2"
        android:layout_margin="20dp"
        android:layout_above="@id/textView3"
        android:text="@string/off" />

    <TextView
        android:id="@+id/logoutDescriptionTxt"
        style="@style/textProperties"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/logout_description" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/logoutDescriptionTxt"
        android:layout_below="@+id/textView3"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/logout"
        />


</RelativeLayout>