<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPrescriptionActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="0dp"
            style="@style/textProperties"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/medicine" />

        <Spinner
            android:id="@+id/medSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            style="@style/textProperties"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/addPrescQt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            style="@style/textProperties"
            android:id="@+id/startDatetv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/start_date" />

        <Button
            android:id="@+id/startDate"
            android:text="@string/pick"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            style="@style/textProperties"
            android:id="@+id/endDatetv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/end_date" />

        <Button
            android:id="@+id/endDate"
            android:text="@string/pick"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            style="@style/textProperties"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/repeat_every" />

        <EditText
            android:id="@+id/periodicityNumber"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:inputType="number"/>

        <Spinner
            android:id="@+id/periodicitySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.3" />


    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            style="@style/textProperties"
            android:id="@+id/tvnotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/addPrescNotes"
            android:hint="@string/important_notes"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:inputType="text|textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvnotes" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/addMedSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="76dp"
            android:layout_marginBottom="64dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addMedCancel"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addMedCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="64dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>