<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPatientActivity"
    android:background="@color/nord_white">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include">

        <LinearLayout
            android:id="@+id/patientCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <EditText
                android:id="@+id/addPatientEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/patient_username"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/addPatientCheckBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/check" />

        </LinearLayout>

        <TextView
            android:id="@+id/addPatientTextViewCheck"
            style="@style/textProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/patientCheck"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/addPatientSubmitBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/submit" />

    </RelativeLayout>
</RelativeLayout>