<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/nord_dark_white"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iconitem"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@color/nord_night_clear"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iconitem"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/name"
                style="@style/textProperties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/quantity"
                style="@style/textProperties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/alarmDate"
                style="@style/textProperties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status"
                style="@style/textProperties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>